--- a/app/templates/_index.html
+++ b/app/templates/_index.html
@@ -1,5 +1,29 @@
+<!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
+    <title><%= appName %></title>
+    <meta charset="utf-8">
+    <meta name="description" content="App Desc">
+    <meta name="viewport" content="width=device-width">
+    <!-- build:css vendors.min.css -->
+    <!-- bower:css -->
+    <!-- endbower -->
+    <!-- endbuild -->
+
+    <!-- build:css styles.min.css -->
+    <!-- inject:css -->
+    <!-- endinject -->
+    <!-- endbuild -->
   </head>
+  <body>
+    <!-- build:js vendors.min.js -->
+    <!-- bower:js -->
+    <!-- endbower -->
+    <!-- endbuild -->
+
+    <!-- build:js scripts.min.js -->
+    <!-- inject:js -->
+    <!-- endinject -->
+    <!-- endbuild -->
+  </body>
 </html>
